--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Name - Portfolio</title>
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the portfolio website of Allen Oberoii, a Frontend web developer with skills in HTML5, CSS and Js. Explore exciting projects and get in touch!"> 
+    <title>Allen Oberoii - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,14 +22,14 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>This is where you write something interesting and maybe a bit quirky about yourself.</p>
+        <p>I'm Passionate about technology, I am an aspiring full stack developer with a strong foundation in programming, networking, and cybersecurity. I am dedicated to building secure, impactful digital solutions and continuously expanding my knowledge. With a focus on ethical hacking and full stack development, I aim to contribute meaningfully to the tech industry, combining technical skill with a commitment to innovation and growth.</p>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
         <ul>
-            <li>Skill 1</li> 
-            <li>Skill 2</li>
+            <li>Web Development</li> 
+            <li>Ethical Hacking</li>
             </ul>
     </section>
 
@@ -45,7 +48,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Allen Oberoii</p>
     </footer>
 
     <script src="script.js"></script>
