--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project">
+        <div class="project"><a href="https://garuna69.github.io/HTML-Practice/">Project 1</a>
             </div>
         <div class="project">
-            </div>
+            <a href="https://garuna69.github.io/Allen-Oberoii/"</div>
         </section>
 
     <section id="contact">
